# rusty-corn

./: .gitignore  Cargo.toml  Procfile
src/: main.rs  service_actor.rs
src/models/: blocks.rs  mod.rs  movies.rs  requests.rs
src/routes/: movies.rs
