[package]
name = "rusty-corn"
version = "0.1.0"
authors = ["Helder Martins <heldermartins89@gmail.com>"]

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
chrono = "0.4"
reqwest = "0.9.9"
futures = "0.1.25"
tokio = "0.1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"