[package]
name = "rusty-corn"
version = "0.1.0"
authors = ["Helder Martins <heldermartins89@gmail.com>"]

[dependencies]
actix-web = "0.7"
actix = "0.7"
reqwest = "0.9.9"
futures = "0.1.25"
tokio = "0.1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.6.1"